1999-08-22  Tomas Ogren  <stric@ing.umu.se>

	* app/tool_options.c: Remember kids, "Options" is spelled "Options",
	not "Ootions"

1999-08-22  Tor Lillqvist  <tml@iki.fi>

	* app/convert.c: Use spinbutton for number of colours.

	* app/preferences_dialog.h: Export gimp_spin_button_new. Not the
	most logical place for it, though.

Sat Aug 21 17:34:53 PDT 1999 Manish Singh <yosh@gimp.org>

	* configure.in: version number bump

	* autogen.sh
	* configure.in
	* app/Makefile.am: comment out gcg stuff, nobody seems to be using it

	* app/colormap_dialog.*: added generated files

Sat Aug 21 22:32:25 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/brush_select.c
	* app/brush_scale.[ch]: implemented brush_scaling for pixmap brushes.
	This commit is done only to get some working code in before I start to
	move all the brush_preview crap into one central place.

Sat Aug 21 20:30:48 BST 1999  Adam D. Moss  <adam@gimp.org>

	* app/frac.[ch]: Eradicated.

	* app/xcf.c: In mourning.

1999-08-21  Tor Lillqvist  <tml@iki.fi>

	* app/errorconsole.c: Also provide a Clear button.

	* app/gimprc.c: Add a missing static function declaration.

	* app/makefile.{cygwin,msc}: Add new files.

	* libgimp/gimp.def: Add new entry points.

	* plug-ins/common/jpeg.c: Must include glib.h first. You don't
	want to know why.

	* plug-ins/common/psp.c: New file. This plug-in Loads Paint Shop
	Pro files (.psp and .tub). Doesn't yet save them. Handles only 24-
	bit images (with or without alpha) correctly so far.

	* plug-ins/makefile.{cygwin,msc}: Build psp. Somebody please add
	it to the auto* build system, too. I guess a test for zlib (which it
	needs) is needed in configure.in.

Sat Aug 21 16:53:17 BST 1999  Adam D. Moss  <adam@gimp.org>

	* plug-ins/common/jpeg.c:  Preview layers need to be alpha-padded,
	since they're not on the bottom of the stack.  That's a GIMP rule.

	Plus... use new API functions gimp_image_{freeze,thaw}_undo() to avoid